# useful-scripts

./: .envrc  Pipfile  bookmarks2json.py  decode-uid-cookie  google-music-export-library  pipenv-run  poetry-run  pyproject.toml  run-in-interactive-shell  sync-music-library-database  sync-music-to-libreelec  sync-music-to-phone  vju-to-m3u8  ytm  ytm.py  zizmor.yaml
.github/: actionlint.yaml  dependabot.yml
.github/linters/: actionlint.yml
.github/workflows/: ci.yml
bookmarkmgr/: .gitignore  build.py  dump-headers.py  generate-default-headers-file  pyproject.toml
bookmarkmgr/bookmarkmgr/: __init__.py  __main__.py  aiohttp.py  asyncio.py  collections.py  curl.py  logging.py  scraper.py  types.py
bookmarkmgr/bookmarkmgr/checks/: __init__.py  broken_link.py  duplicate_link.py  link_status.py
bookmarkmgr/bookmarkmgr/clients/: __init__.py  archive_today.py  imgbb.py  imgpile.py  raindrop.py  wayback_machine.py
bookmarkmgr/bookmarkmgr/commands/: export_collection.py  maintain_collection.py
bookmarkmgr/bookmarkmgr/cronet/: __init__.py  _cronet.pyi  default_headers.py  errors.py  logging.py  models.py  session.py  types.py  utils.py
bookmarkmgr/bookmarkmgr/cronet/managers/: executor.py  request_callback.py
bookmarkmgr/bookmarkmgr/playwright/: __init__.py  browser.py  errors.py  logging.py  models.py  session.py
bookmarkmgr/bookmarkmgr/utils/: link_metadata.py
bookmarkmgr/tests/: test_cronet.py  test_playwright.py
bookmarks4diff/: pyproject.toml
bookmarks4diff/bookmarks4diff/: __main__.py
ytm/: Pipfile  pyproject.toml
ytm/ytm/: __main__.py
