[project]
name = "bookmarkmgr"
description = ""
version = "0.1.0"
authors = []
requires-python = '>=3.12,<4.0'
# Dependabot still requires `tool.poetry.dependencies`.
# https://github.com/dependabot/dependabot-core/issues/11237#issuecomment-2846037231
dynamic = ["dependencies"]

[project.scripts]
bookmarkmgr = "bookmarkmgr.__main__:main"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
extra_checks = true
no_implicit_reexport = true
python_executable = "${VIRTUAL_ENV}/bin/python"
python_version = "3.12"
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "enlighten",
]
ignore_missing_imports = true

[tool.poetry]
requires-poetry = '>=2.0'

[tool.poetry.dependencies]
aiohttp = "^3.11.18"
aiohttp-retry = "^2.9.1"
cffi = "^1.17.1"
# >1.13.0 adds garbage characters.
enlighten = "1.13.0"
overrides = "^7.7.0"
tld = "^0.13"
yarl = "^1.20.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

# https://github.com/python-poetry/poetry/issues/2740
[tool.poetry.build]
script = "build.py"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "D10",
    "D203",
    "D212",
    "S607",
    "TRY400",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
order-by-type = false

[build-system]
requires = [
    "cffi",
    'poetry-core (>=2.0,<3.0)',
    "setuptools",
]
build-backend = "poetry.core.masonry.api"
