[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "types-tqdm>=4.68.0.20260608",
]

[project]
name = "bookmarkmgr"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "aiohttp-retry>=2.9.1",
    "cffi>=2.0.0",
    "overrides>=7.7.0",
    "tld>=0.13",
    "tqdm>=4.68.2",
    "yarl>=1.24.2",
]

[project.scripts]
bookmarkmgr = "bookmarkmgr.__main__:main"

[tool.poetry]
requires-poetry = ">=2.2"

# https://github.com/python-poetry/poetry/issues/2740
[tool.poetry.build]
script = "build.py"

[tool.pyrefly]
python-version = "3.14"
preset = "all"

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "D10",
    "D203",
    "D212",
    "S607",
    "TRY400",
]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "bookmarkmgr",
]
order-by-type = false

[build-system]
requires = [
    "cffi",
    "poetry-core>=2",
    "setuptools",
]
build-backend = "poetry.core.masonry.api"
