[tool.poetry]
name = "ytm"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = ">=2022.06.22"  # https://github.com/ytdl-org/youtube-dl/issues/29494
ytmusicapi = "^1.4.0"

[tool.poetry.scripts]
ytm = "ytm.__main__:main"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "D10",
    "D203",
    "D212",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
order-by-type = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
