[tool.mypy]
ignore_errors = true

[tool.poetry]
name = "ytm"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = ">=2025.1.26"  # https://github.com/ytdl-org/youtube-dl/issues/29494
ytmusicapi = "^1.11.1"

[tool.poetry.scripts]
ytm = "ytm.__main__:main"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "D10",
    "D203",
    "D212",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
order-by-type = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
